# wandb-agent

./: .gitignore  README.md  config.example.yaml  fake_training.py  pyproject.toml
tests/: test_agent.py  test_poller.py
tests/fixtures/: diverging_run.json  healthy_run.json  overfitting_run.json
wandb_agent/: __init__.py  agent.py  approval.py  cli.py  config.py  executor.py  poller.py  store.py
