[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wandb-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "wandb>=0.17",
    "anthropic>=0.25",
    "openai>=1.30",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
wandb-agent = "wandb_agent.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["wandb_agent"]
